[#39] Ensure world files are not fetched when fetching worlds
Also:
- Reverse the world file association.
- When a world is gone locally, do not delete its record; instead, try to recreate it using its file
- If a world is gone locally, and it has no file in the database, set its timestamp to `null`